@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.96 2004/10/15 02:54:16 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.97 2004/10/16 13:38:09 zhen Exp $
+
+  16 Oct 2004; <zhen@gentoo.org> livecd/files/x86-help.msg,
+  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
+  livecd/runscript-support/livecdfs-update.sh,
+  modules/livecd_stage2_target.py:
+  patches for gensplash support from Chris Gianelloni <wolf31o2@gentoo.org>
 
   14 Oct 2004; <zhen@gentoo.org> livecd/runscript/x86-archscript.sh:
   acpi=off changed to acpi=ht. enables HT automatically for intel users, but
